charts rendered for article 20170629

--- a/archive.html
+++ b/archive.html
@@ -66,7 +66,7 @@
 					<div class="header-inner">
 						<ul class="menu">
 							<li>
-								<a href="#" class="active">Home</a>
+								<a href="index.html">Home</a>
 							</li>
 							<li>
 								<a href="system.html">Design System</a>
@@ -75,7 +75,7 @@
 								<a href="visualize.html">Data Visualization</a>
 							</li>
 							<li>
-								<a href="archive.html">Archives</a>
+								<a href="archive.html" class="active">Archives</a>
 							</li>
 						</ul>
 						<!-- BEGIN COPYRIGHT FOR MOBILE -->
@@ -89,7 +89,7 @@
 			</div>
 		</nav>
 		<!-- END HEADER -->
-		<section class="jumbotron full-height relative" data-pages-bg-image="assets/images/hero_1.jpg">
+		<section class="jumbotron full-height relative" data-pages-bg-image="assets/images/hero_2.jpeg">
 			<div class="container-xs-height full-height">
 				<div class="col-xs-height col-middle text-left">
 					<!-- BEGIN CONTENT -->
