--- a/system.html
+++ b/system.html
@@ -66,13 +66,13 @@
 					<div class="header-inner">
 						<ul class="menu">
 							<li>
-								<a href="#" class="active">Home</a>
+								<a href="index.html">Home</a>
 							</li>
 							<li>
-								<a href="system.html">Design System</a>
+								<a href="system.html" class="active">Design System</a>
 							</li>
 							<li>
-								<a href="visualize.html">Data Visualization</a>
+								<a href="visualize.html" >Data Visualization</a>
 							</li>
 							<li>
 								<a href="archive.html">Archives</a>
@@ -89,7 +89,7 @@
 			</div>
 		</nav>
 		<!-- END HEADER -->
-		<section class="jumbotron full-height relative" data-pages-bg-image="assets/images/hero_1.jpg">
+		<section class="jumbotron full-height relative" data-pages-bg-image="assets/images/hero_5.jpeg">
 			<div class="container-xs-height full-height">
 				<div class="col-xs-height col-middle text-left">
 					<!-- BEGIN CONTENT -->
