--- a/visualize.html
+++ b/visualize.html
@@ -66,13 +66,13 @@
 					<div class="header-inner">
 						<ul class="menu">
 							<li>
-								<a href="#" class="active">Home</a>
+								<a href="index.html">Home</a>
 							</li>
 							<li>
 								<a href="system.html">Design System</a>
 							</li>
 							<li>
-								<a href="visualize.html">Data Visualization</a>
+								<a href="visualize.html" class="active">Data Visualization</a>
 							</li>
 							<li>
 								<a href="archive.html">Archives</a>
@@ -89,32 +89,7 @@
 			</div>
 		</nav>
 		<!-- END HEADER -->
-		<section class="jumbotron full-height relative" data-pages-bg-image="assets/images/hero_1.jpg">
-			<div class="container-xs-height full-height">
-				<div class="col-xs-height col-middle text-left">
-					<!-- BEGIN CONTENT -->
-					<div class="content-layer">
-						<div class="inner full-height">
-							<div class="container-xs-height full-height">
-								<div class="col-xs-height col-middle text-left">
-									<div class="container">
-										<div class="row">
-											<div class="col-md-6 no-padding col-xs-10 col-xs-offset-1">
-												<h1 class="light sm-text-center" data-swiper-parallax="-15%"> Create your own front-end with endless possibilities.</h1>
-												<h4 class="sm-text-center">Save time, save money, look more professional and win more clients.</h4>
-												<h5 class="block-title text-white sm-text-center">Behind the scenes watch tour</h5>
-												<p class="fs-12 font-arial hint-text sm-text-center">Available at themeforest, envato market place.</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- END CONTENT -->
-				</div>
-			</div>
-		</section>
+		
 		<!-- BEGIN CORE FRAMEWORK -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="pages/js/pages.image.loader.js"></script>
