--- a/visualize.html
+++ b/visualize.html
@@ -89,7 +89,25 @@
 			</div>
 		</nav>
 		<!-- END HEADER -->
-		
+		<section>
+			<div class="container-xs-height">
+				<div class="col-xs-height col-middle text-left">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-4">...</div>
+							<div class="col-md-4">...</div>
+							<div class="col-md-4">...</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="">
+			<div class="radio radio-info">
+			    <input type="radio" checked="checked" value="" name="" id="">
+			    <label for="">Bar Chart</label>
+			</div>
+		</section>
 		<!-- BEGIN CORE FRAMEWORK -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="pages/js/pages.image.loader.js"></script>
