--- a/visualize.html
+++ b/visualize.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="designapp">
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta charset="utf-8" />
@@ -26,10 +26,10 @@
 		<link class="main-stylesheet" href="pages/css/pages-icons.css" rel="stylesheet" type="text/css" />
 		<!-- END PAGES CSS -->
 		<!-- BEGIN CUSTOM CSS -->
-		<link class="custom-stylesheet" rel="stylesheet" type="text/css" href="assets/css/custom.css">
+		<link class="custom-stylesheet" rel="stylesheet" type="text/css" href="assets/css/main.css">
 		<!-- END CUSTOM CSS -->
 	</head>
-	<body class="pace-dark">
+	<body class="pace-dark" ng-controller="VisualizeController" ng-init="init()">
 		<!-- BEGIN HEADER -->
 		<nav class="header bg-header transparent-dark " data-pages="header" data-pages-header="autoresize" data-pages-resize-class="dark">
 			<div class="container relative">
@@ -89,30 +89,73 @@
 			</div>
 		</nav>
 		<!-- END HEADER -->
-		<section>
+		<section class="step-guide">
 			<div class="container-xs-height">
 				<div class="col-xs-height col-middle text-left">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-4">...</div>
-							<div class="col-md-4">...</div>
-							<div class="col-md-4">...</div>
+							<div class="col-md-4">
+								<h5 class="sm-text-center" ng-class="{'text-primary': current_step === 1}">
+									<span class="bold text-uppercase">step 1<br></span>
+									<span>Select chart type and configure options.</span>
+								</h5>
+							</div>
+							<div class="col-md-4">
+								<h5 class="sm-text-center" ng-class="{'text-primary': current_step === 2}">
+									<span class="bold text-uppercase">step 2<br></span>
+									<span>Download the rendered HTML file.</span>
+								</h5>
+							</div>
+							<div class="col-md-4">
+								<h5 class="sm-text-center" ng-class="{'text-primary': current_step === 3}">
+									<span class="bold text-uppercase">step 3<br></span>
+									<span>Add file to repository and commit.</span>
+								</h5>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="">
-			<div class="radio radio-info">
-			    <input type="radio" checked="checked" value="" name="" id="">
-			    <label for="">Bar Chart</label>
-			</div>
+		<section class="chart-type" ng-if="(current_step === 1)">
+			<div class="container-xs-height">
+				<div class="col-xs-height col-middle text-left">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-12">
+								<h5>1. Select your chart type.</h5>
+							</div>
+							<div class="col-md-12">
+								<form class="custom-radio">
+									<label class="text-capitalize">
+										<input type="radio" value="linechart" ng-model="chart.type">
+										line chart
+									</label>
+									<label class="text-capitalize">
+										<input type="radio" value="barchart" ng-model="chart.type">
+										bar chart
+									</label>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</section>
+		<section ng-if="(chart.type === 'barchart')">
+			
 		</section>
 		<!-- BEGIN CORE FRAMEWORK -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="pages/js/pages.image.loader.js"></script>
 		<script type="text/javascript" src="assets/plugins/jquery/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<!-- BEGIN ANGULAR DEPENDENCIES -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-animate.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-aria.min.js"></script>
+    	<script src="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.2/angular-material.js"></script>
+    	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-messages.min.js"></script>
 		<!-- BEGIN SWIPER DEPENDENCIES -->
 		<script type="text/javascript" src="assets/plugins/swiper/js/swiper.jquery.min.js"></script>
 		<script type="text/javascript" src="assets/plugins/velocity/velocity.min.js"></script>
@@ -125,6 +168,8 @@
 		<!-- END PAGES LIB -->
 		<!-- BEGIN YOUR CUSTOM JS -->
 		<script type="text/javascript" src="assets/js/custom.js"></script>
+		<script type="text/javascript" src="assets/js/app.module.js"></script>
+		<script type="text/javascript" src="assets/js/visualize.controller.js"></script>
 		<!-- END PAGES LIB -->
 	</body>
 </html>
