--- a/index.html
+++ b/index.html
@@ -56,24 +56,25 @@
 			<div class="sidebar-menu">
 				<ul class="menu-items">
 					<li class="m-t-30">
-						<a href="#" class="detailed">
-							<span class="title">Page 1</span>
-							<span class="details">234 notifications</span>
+						<a href="#" >
+							<span class="title text-capitalize">design system</span>
+							
 						</a>
-						<span class="icon-thumbnail "><i class="pg-mail"></i></span>
+						<span class="icon-thumbnail "><i class="pg-grid"></i></span>
 					</li>
 					<li class="">
-						<a href="#">
-							<span class="title">Page 2</span>
+						<a href="#" class="detailed">
+							<span class="title text-capitalize">data visualize</span>
+							<span class="details text-capitalize">chart rendering tool</span>
 						</a>
-						<span class="icon-thumbnail "><i class="pg-social"></i></span>
+						<span class="icon-thumbnail "><i class="pg-charts"></i></span>
 					</li>
 					<li class="">
 						<a href="javascript:;">
-							<span class="title">Page 3</span>
+							<span class="title">Archives</span>
 							<span class=" arrow"></span>
 						</a>
-						<span class="icon-thumbnail"><i class="pg-grid"></i></span>
+						<span class="icon-thumbnail"><i class="pg-folder_alt"></i></span>
 						<ul class="sub-menu">
 							<li class="">
 								<a href="#">Sub Page 1</a>
@@ -162,6 +163,7 @@
 					<!-- START CONTAINER FLUID -->
 					<div class="container-fluid container-fixed-lg">
 						<!-- BEGIN PlACE PAGE CONTENT HERE -->
+						
 						<!-- END PLACE PAGE CONTENT HERE -->
 					</div>
 					<!-- END CONTAINER FLUID -->
