--- a/index.html
+++ b/index.html
@@ -159,25 +159,25 @@
 			<!-- START PAGE CONTENT WRAPPER -->
 			<div class="page-content-wrapper">
 				<!-- START PAGE CONTENT -->
-				<div class="content">
+				<div class="content" id="main">
 					<!-- START CONTAINER FLUID -->
 					<div class="container-fluid container-fixed-lg">
 						<!-- BEGIN PlACE PAGE CONTENT HERE -->
 						<div class="row">
 							<div class="col-md-4">
-								<h5 class="sm-text-center" ng-class="{'text-primary': current_step === 1}">
+								<h5 class="sm-text-center" v-bind:class="{'text-primary': current_step === 1}">
 									<span class="bold text-uppercase">step 1<br></span>
 									<span>Select chart type and configure options.</span>
 								</h5>
 							</div>
 							<div class="col-md-4">
-								<h5 class="sm-text-center" ng-class="{'text-primary': current_step === 2}">
+								<h5 class="sm-text-center" v-bind:class="{'text-primary': current_step === 2}">
 									<span class="bold text-uppercase">step 2<br></span>
 									<span>Download the rendered HTML file.</span>
 								</h5>
 							</div>
 							<div class="col-md-4">
-								<h5 class="sm-text-center" ng-class="{'text-primary': current_step === 3}">
+								<h5 class="sm-text-center" v-bind:class="{'text-primary': current_step === 3}">
 									<span class="bold text-uppercase">step 3<br></span>
 									<span>Add file to repository and commit.</span>
 								</h5>
