--- a/index.html
+++ b/index.html
@@ -183,6 +183,38 @@
 								</h5>
 							</div>
 						</div>
+						<div class="row" v-if="(current_step === 1)">
+							<div class="col-md-12">
+								<h5 class="semi-bold">1. Select your chart type.</h5>
+							</div>
+							<div class="col-md-12">
+								<div class="radio radio-info">
+									<input type="radio" id="bar" value="bar" v-model="chart.type">
+									<label for="one" class="text-capitalize semi-bold">bar chart</label>
+									<br>
+									<input type="radio" id="line" value="line" v-model="chart.type">
+									<label for="two" class="text-capitalize semi-bold">line chart</label>
+									<br>
+								</div>
+							</div>
+						</div>
+						<div class="row" v-if="(chart.type === 'bar')">
+							<div class="col-md-12">
+								<h5 class="semi-bold">2. Data and Options for the X-Axis</h5>
+							</div>
+							<div class="col-md-12">
+								<form role="form">
+									<div class="form-group form-group-default required">
+								        <label class="text-capitalize">x axis label name</label>
+								        <input type="text" class="form-control" name="XlabelName" v-model="chart.x_label" required>
+								    </div>
+								    <div class="form-group form-group-default required">
+								        <label class="text-capitalize">x axis label data</label>
+								        <textarea type="text" rows="10" class="form-control" v-model="chart.x_data" required name="XlabelData"></textarea>
+								    </div>
+								</form>
+							</div>
+						</div>
 						<!-- END PLACE PAGE CONTENT HERE -->
 					</div>
 					<!-- END CONTAINER FLUID -->
