--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<!--[if lte IE 9]>
 				<link href="pages/css/ie9.css" rel="stylesheet" type="text/css" />
 		<![endif]-->
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<script type="text/javascript">
 		window.onload = function()
 		{
@@ -161,7 +162,7 @@
 				<!-- START PAGE CONTENT -->
 				<div class="content" id="main">
 					<!-- START CONTAINER FLUID -->
-					<div class="container-fluid container-fixed-lg">
+					<div class="container-fluid container-fixed-lg p-t-40 p-b-40 p-l-50 p-r-50">
 						<!-- BEGIN PlACE PAGE CONTENT HERE -->
 						<div class="row">
 							<div class="col-md-4">
@@ -183,36 +184,142 @@
 								</h5>
 							</div>
 						</div>
-						<div class="row" v-if="(current_step === 1)">
+						<div class="row m-t-20" v-if="(current_step === 1)">
 							<div class="col-md-12">
 								<h5 class="semi-bold">1. Select your chart type.</h5>
 							</div>
 							<div class="col-md-12">
-								<div class="radio radio-info">
+								<div class="radio radio-info p-l-20">
 									<input type="radio" id="bar" value="bar" v-model="chart.type">
-									<label for="one" class="text-capitalize semi-bold">bar chart</label>
+									<label for="bar" class="text-capitalize semi-bold">bar chart</label>
 									<br>
 									<input type="radio" id="line" value="line" v-model="chart.type">
-									<label for="two" class="text-capitalize semi-bold">line chart</label>
+									<label for="line" class="text-capitalize semi-bold">line chart</label>
 									<br>
 								</div>
 							</div>
 						</div>
-						<div class="row" v-if="(chart.type === 'bar')">
+						<div class="row m-t-20" v-if="(chart.type === 'bar')">
 							<div class="col-md-12">
 								<h5 class="semi-bold">2. Data and Options for the X-Axis</h5>
 							</div>
 							<div class="col-md-12">
-								<form role="form">
+								<form role="form" class="p-l-20">
 									<div class="form-group form-group-default required">
 								        <label class="text-capitalize">x axis label name</label>
 								        <input type="text" class="form-control" name="XlabelName" v-model="chart.x_label" required>
 								    </div>
 								    <div class="form-group form-group-default required">
 								        <label class="text-capitalize">x axis label data</label>
-								        <textarea type="text" rows="10" class="form-control" v-model="chart.x_data" required name="XlabelData"></textarea>
+								        <textarea type="text" class="form-control custom-height" v-model="chart.x_data" required name="XlabelData"></textarea>
 								    </div>
 								</form>
+							</div>
+						</div>
+						<div class="row m-t-20" v-if="(chart.type === 'bar')">
+							<div class="col-md-12">
+								<h5 class="semi-bold">3. Data and Options for the Y-Axis</h5>
+							</div>
+							<div class="col-md-12">
+								<div class="p-l-20">
+									<h5 class="semi-bold">Y-Axis Left (Required)</h5>
+								</div>
+							</div>
+							<div class="col-md-9">
+								<div class="p-l-20">
+									<div class="form-group form-group-default required">
+								        <label class="text-capitalize">y axis label name</label>
+								        <input type="text" class="form-control" name="YlabelName1" v-model="chart.y_label_1" required>
+								    </div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="checkbox check-info">
+								    <input type="checkbox" v-model="chart.y_label_1_percentage" id="percentage1">
+								    <label for="percentage1" class="text-capitalize">in percentage</label>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="p-l-20">
+									<h5 class="semi-bold">Y-Axis Right (Optional)</h5>
+								</div>
+							</div>
+							<div class="col-md-9">
+								<div class="p-l-20">
+									<div class="form-group form-group-default required">
+								        <label class="text-capitalize">y axis label name</label>
+								        <input type="text" class="form-control" name="YlabelName2" v-model="chart.y_label_2" required>
+								    </div>
+								</div>
+							</div>
+							<div class="col-md-3">
+								<div class="checkbox check-info">
+								    <input type="checkbox" v-model="chart.y_label_2_percentage" id="percentage2">
+								    <label for="percentage2" class="text-capitalize">in percentage</label>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<div class="p-l-20">
+									<h5 class="semi-bold">Y-Axis Datasets</h5>
+								</div>
+							</div>
+							<div class="col-md-12 m-b-20">
+								<div class="p-l-20">
+									<button class="btn btn-primary btn-animated from-left fa fa-plus" type="button" v-on:click="add_dataset()">
+									    <span class="text-capitalize">add new dataset</span>
+									</button>
+								</div>
+							</div>
+							<div v-for="(data, index) in chart.y_dataset" class="col-md-12">
+								<div class="m-t-30 p-l-20">
+									<h5 class="bold">Dataset {{index + 1}}</h5>
+									<div class="row">
+										<div class="col-md-12">
+											<div class="form-group form-group-default required">
+										        <label class="text-capitalize">dataset label name</label>
+										        <input type="text" class="form-control" name="YlabelName2" v-model="data.label" required>
+										    </div>
+										</div>
+										<div class="col-md-12">
+											<div class="form-group form-group-default required">
+										        <label class="text-capitalize">dataset data</label>
+										        <textarea type="text" class="form-control custom-height" v-model="data.data" required name="data"></textarea>
+										    </div>
+										</div>
+										<div class="col-md-6">
+											<h6 class="text-uppercase bold">graph color</h6>
+											<select class="form-control" v-model="data.color">
+											    <option value="purple" class="text-capitalize">Purple</option>
+											    <option value="green" class="text-capitalize">Green</option>
+											    <option value="blue" class="text-capitalize">Blue</option>
+											    <option value="orange" class="text-capitalize">Orange</option>
+											    <option value="yellow" class="text-capitalize">Yellow</option>
+											</select>
+										</div>
+										<div class="col-md-6">
+											<h6 class="text-uppercase bold">parent axis</h6>
+											<div class="radio radio-info m-t-20">
+												<input type="radio" value="1" id="left" v-model="data.axis">
+												<label for="left" class="text-capitalize semi-bold">follow left y axis</label>
+												<input type="radio" value="2" id="right" v-model="data.axis">
+												<label for="right" class="text-capitalize semi-bold">follow right y axis</label>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row" v-if="(current_step === 1)">
+							<div class="col-md-12">
+								<hr>
+								<div class="p-l-20">
+									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_chart()">
+									    <span class="text-capitalize">preview chart</span>
+									</button>
+								</div>
+							</div>
+							<div class="col-md-12">
+								<canvas id="chart" ref="chart"></canvas>
 							</div>
 						</div>
 						<!-- END PLACE PAGE CONTENT HERE -->
@@ -239,6 +346,8 @@
 		<script src="assets/plugins/imagesloaded/imagesloaded.pkgd.min.js"></script>
 		<script src="assets/plugins/jquery-actual/jquery.actual.min.js"></script>
 		<script src="assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
+		<script src="assets/plugins/classie/classie.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
 		<!-- END VENDOR JS -->
 		<!-- BEGIN CORE TEMPLATE JS -->
 		<script src="pages/js/pages.js" type="text/javascript"></script>
