--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 								</div>
 							</div>
 							<div class="col-md-12">
-								<canvas id="chart" ref="chart"></canvas>
+								<canvas id="chart"></canvas>
 							</div>
 						</div>
 						<!-- END PLACE PAGE CONTENT HERE -->
