--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 		<script src="assets/plugins/jquery-actual/jquery.actual.min.js"></script>
 		<script src="assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 		<script src="assets/plugins/classie/classie.js" type="text/javascript"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
 		<!-- END VENDOR JS -->
 		<!-- BEGIN CORE TEMPLATE JS -->
 		<script src="pages/js/pages.js" type="text/javascript"></script>
