--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_chart()">
 									    <span class="text-capitalize">preview chart</span>
 									</button>
-									<button class="btn btn-success btn-animated from-left fa fa-download m-l-20" type="button" data-toggle="modal" data-target="#downloadModal">
+									<button class="btn btn-success btn-animated from-left fa fa-download m-l-20" type="button" v-on:click="(show_download_modal = true)">
 									    <span class="text-capitalize">Download Chart</span>
 									</button>
 								</div>
@@ -349,36 +349,41 @@
 			<!-- END PAGE CONTENT WRAPPER -->
 		</div>
 		<!-- END PAGE CONTAINER -->
-		<!-- BEGIN MODALS -->
-		<div class="modal fade slide-up disable-scroll" id="downloadModal" tabindex="-1" role="dialog" aria-labelledby="modalSlideUpLabel" aria-hidden="false">
-		    <div class="modal-dialog">
-		        <div class="modal-content-wrapper">
-			        <div class="modal-content">
-			            <div class="modal-header clearfix text-left">
-			                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-			                  <i class="pg-close fs-14"></i>
-			                </button>
-			                <h5 class="bold">Download Chart File</h5>
-			            </div>
-			            <div class="modal-body">
-			                <form role="form">
-							    <div class="form-group form-group-default required">
-							        <label>Chart Filename</label>
-							        <input type="text" class="form-control" required v-model="filename">
-							    </div>
-			                </form>
-			            </div>
-			            <div class="modal-footer">
-			            	<button class="btn btn-success btn-animated from-left fa fa-download m-l-20" type="button" v-on:click="download_file()">
-							    <span class="text-capitalize">Download File</span>
-							</button>
-			            </div>
+		<!-- BEGIN TEMPLATES -->
+		<template id="downloadModal">
+			<div class="modal fade slide-up disable-scroll" tabindex="-1" role="dialog" aria-labelledby="modalSlideUpLabel" aria-hidden="false">
+			    <div class="modal-dialog">
+			        <div class="modal-content-wrapper">
+				        <div class="modal-content">
+				            <div class="modal-header clearfix text-left">
+				                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+				                  <i class="pg-close fs-14"></i>
+				                </button>
+				                <h5 class="bold">Download Chart File</h5>
+				            </div>
+				            <div class="modal-body">
+				                <form role="form">
+								    <div class="form-group form-group-default required">
+								        <label>Chart Filename</label>
+								        <input type="text" class="form-control" required v-model="filename">
+								    </div>
+				                </form>
+				            </div>
+				            <div class="modal-footer">
+				            	<button class="btn btn-success btn-animated from-left fa fa-download" type="button" v-on:click="download_chart()">
+								    <span class="text-capitalize">Download File</span>
+								</button>
+				            </div>
+				        </div>
 			        </div>
-		        </div>
-		        <!-- /.modal-content -->
-		    </div>
-		</div>
-		<!-- ENd MODALS -->
+			        <!-- /.modal-content -->
+			    </div>
+			</div>
+		</template>
+		<!-- END TEMPLATES -->
+		<!-- BEGIN MODALS -->
+		<downloadModal v-if="(show_download_modal === true)" v-on:close="(show_download_modal = false)"></downloadModal>
+		<!-- END MODALS -->
 		<!-- BEGIN VENDOR JS -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
 		<script src="assets/plugins/jquery/jquery-1.11.1.min.js" type="text/javascript"></script>
