--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 		</div>
 		<!-- END PAGE CONTAINER -->
 		<!-- BEGIN TEMPLATES -->
-		<template id="downloadModal">
+		<template id="download-modal">
 			<div class="modal fade slide-up disable-scroll" tabindex="-1" role="dialog" aria-labelledby="modalSlideUpLabel" aria-hidden="false">
 			    <div class="modal-dialog">
 			        <div class="modal-content-wrapper">
@@ -382,7 +382,7 @@
 		</template>
 		<!-- END TEMPLATES -->
 		<!-- BEGIN MODALS -->
-		<downloadModal v-if="(show_download_modal === true)" v-on:close="(show_download_modal = false)"></downloadModal>
+		<download-modal v-if="(show_download_modal === true)" v-on:close="(show_download_modal = false)"></download-modal>
 		<!-- END MODALS -->
 		<!-- BEGIN VENDOR JS -->
 		<script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
