--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
-									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_chart()">
+									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_chart(); download_file();">
 									    <span class="text-capitalize">preview chart</span>
 									</button>
-									<button class="btn btn-success btn-animated from-left fa fa-download m-l-20" type="button" v-on:click="(show_download_modal = true)">
+									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" type="button" id="download-btn">
 									    <span class="text-capitalize">Download Chart</span>
-									</button>
+									</a>
 								</div>
 							</div>
 							<div class="col-md-12 p-t-30">
@@ -352,33 +352,33 @@
 		<!-- BEGIN TEMPLATES -->
 		<template id="download-modal">
 			<div class="modal fade slide-up disable-scroll" tabindex="-1" role="dialog" aria-labelledby="modalSlideUpLabel" aria-hidden="false">
-			    <div class="modal-dialog">
-			        <div class="modal-content-wrapper">
-				        <div class="modal-content">
-				            <div class="modal-header clearfix text-left">
-				                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-				                  <i class="pg-close fs-14"></i>
-				                </button>
-				                <h5 class="bold">Download Chart File</h5>
-				            </div>
-				            <div class="modal-body">
-				                <form role="form">
-								    <div class="form-group form-group-default required">
-								        <label>Chart Filename</label>
-								        <input type="text" class="form-control" required v-model="filename">
-								    </div>
-				                </form>
-				            </div>
-				            <div class="modal-footer">
-				            	<button class="btn btn-success btn-animated from-left fa fa-download" type="button" v-on:click="download_chart()">
-								    <span class="text-capitalize">Download File</span>
-								</button>
-				            </div>
-				        </div>
+		    <div class="modal-dialog">
+		        <div class="modal-content-wrapper">
+			        <div class="modal-content">
+			            <div class="modal-header clearfix text-left">
+			                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+			                  <i class="pg-close fs-14"></i>
+			                </button>
+			                <h5 class="bold">Download Chart File</h5>
+			            </div>
+			            <div class="modal-body">
+			                <form role="form">
+							    <div class="form-group form-group-default required">
+							        <label>Chart Filename</label>
+							        <input type="text" class="form-control" required v-model="filename">
+							    </div>
+			                </form>
+			            </div>
+			            <div class="modal-footer">
+			            	<button class="btn btn-success btn-animated from-left fa fa-download" type="button" v-on:click="download_chart()">
+							    <span class="text-capitalize">Download File</span>
+							</button>
+			            </div>
 			        </div>
-			        <!-- /.modal-content -->
-			    </div>
-			</div>
+		        </div>
+		        <!-- /.modal-content -->
+		    </div>
+		</div>
 		</template>
 		<!-- END TEMPLATES -->
 		<!-- BEGIN MODALS -->
