--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_chart(); download_file();">
 									    <span class="text-capitalize">preview chart</span>
 									</button>
-									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" type="button" id="download-btn">
+									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" id="download-btn" download="chart.html">
 									    <span class="text-capitalize">Download Chart</span>
 									</a>
 								</div>
