--- a/index.html
+++ b/index.html
@@ -340,13 +340,12 @@
 								<canvas id="chart"></canvas>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart.type === 'table)">
+						<div class="row m-t-20" v-if="(chart.type === 'table')">
 							<div class="col-md-12">
 								<h5 class="semi-bold">3. Table Header</h5>
 							</div>
 							<div class="col-md-12">
 								<form class="p-l-20" role="form">
-									
 								</form>
 							</div>
 						</div>
