--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 								<form role="form" class="p-l-20">
 									<div class="form-group form-group-default required">
 								        <label>Chart Title</label>
-								        <input type="text" class="form-control" v-model="chart.title">
+								        <input type="text" class="form-control" v-model="title">
 								    </div>
 								</form>
 							</div>
@@ -347,7 +347,13 @@
 							<div class="col-md-12">
 								<div class="p-b-20 p-l-20">
 									<div class="row">
-										<div class="col-md-6">
+										<div class="col-md-4">
+											<div class="form-group form-group-default required m-t-15">
+										        <label class="text-capitalize">table header</label>
+										        <input type="text" class="form-control custom-height" required>
+										    </div>
+										</div>
+										<div class="col-md-4">
 											<h6 class="text-uppercase bold">table header color</h6>
 											<select class="form-control">
 											    <option value="purple" class="text-capitalize">Purple</option>
@@ -357,7 +363,7 @@
 											    <option value="yellow" class="text-capitalize">Yellow</option>
 											</select>
 										</div>
-										<div class="col-md-6">
+										<div class="col-md-4">
 											<div class="p-t-30">
 												<div class="checkbox check-info">
 												    <input type="checkbox">
