--- a/index.html
+++ b/index.html
@@ -203,18 +203,18 @@
 							</div>
 							<div class="col-md-12">
 								<div class="radio radio-info p-l-20">
-									<input type="radio" id="bar" value="bar" v-model="chart.type">
+									<input type="radio" id="bar" value="bar" v-model="chart_type">
 									<label for="bar" class="text-capitalize semi-bold">bar chart</label>
 									<br>
-									<input type="radio" id="line" value="line" v-model="chart.type">
+									<input type="radio" id="line" value="line" v-model="chart_type">
 									<label for="line" class="text-capitalize semi-bold">line chart</label>
 									<br>
-									<input type="radio" id="table" value="table" v-model="chart.type">
+									<input type="radio" id="table" value="table" v-model="chart_type">
 									<label for="table" class="text-capitalize semi-bold">table</label>
 								</div>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart.type === 'bar')">
+						<div class="row m-t-20" v-if="(chart_type === 'bar')">
 							<div class="col-md-12">
 								<h5 class="semi-bold">3. Data and Options for the X-Axis</h5>
 							</div>
@@ -231,7 +231,7 @@
 								</form>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart.type === 'bar')">
+						<div class="row m-t-20" v-if="(chart_type === 'bar')">
 							<div class="col-md-12">
 								<h5 class="semi-bold">4. Data and Options for the Y-Axis</h5>
 							</div>
@@ -324,7 +324,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="row" v-if="(chart.type === 'bar')">
+						<div class="row" v-if="(chart_type === 'bar')">
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
@@ -340,7 +340,7 @@
 								<canvas id="chart"></canvas>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart.type === 'table')">
+						<div class="row m-t-20" v-if="(chart_type === 'table')">
 							<div class="col-md-12">
 								<h5 class="semi-bold">3. Table Settings and Header Data</h5>
 							</div>
@@ -349,13 +349,13 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="form-group form-group-default required m-t-15">
-										        <label class="text-capitalize">table header</label>
-										        <input type="text" class="form-control custom-height" required>
+										        <label class="text-capitalize">column count</label>
+										        <input type="text" class="form-control custom-height" required v-model="table.column_count">
 										    </div>
 										</div>
 										<div class="col-md-4">
 											<h6 class="text-uppercase bold">table header color</h6>
-											<select class="form-control">
+											<select class="form-control" v-model="table.header_color">
 											    <option value="purple" class="text-capitalize">Purple</option>
 											    <option value="green" class="text-capitalize">Green</option>
 											    <option value="blue" class="text-capitalize">Blue</option>
@@ -366,8 +366,8 @@
 										<div class="col-md-4">
 											<div class="p-t-30">
 												<div class="checkbox check-info">
-												    <input type="checkbox">
-												    <label class="text-capitalize">with left number</label>
+												    <input type="checkbox" v-model="table.left_number" id="leftNumber">
+												    <label for="leftNumber" class="text-capitalize">with left number</label>
 												</div>
 											</div>
 										</div>
@@ -378,41 +378,56 @@
 								<form class="p-l-20" role="form">
 									 <div class="form-group form-group-default required">
 								        <label class="text-capitalize">table header</label>
-								        <textarea type="text" class="form-control custom-height" required></textarea>
+								        <textarea type="text" class="form-control custom-height" required v-model="table.header_data"></textarea>
 								    </div>
 								</form>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart.type === 'table')">
+						<div class="row m-t-20" v-if="(chart_type === 'table')">
 							<div class="col-md-12">
 								<h5 class="semi-bold">4. Table Data</h5>
 							</div>
 							<div class="col-md-12 m-b-20">
 								<div class="p-l-20">
-									<button class="btn btn-primary btn-animated from-left fa fa-plus" type="button" v-on:click="add_dataset()">
+									<button class="btn btn-primary btn-animated from-left fa fa-plus" type="button" v-on:click="add_table_row()">
 									    <span class="text-capitalize">add new table row</span>
 									</button>
 								</div>
 							</div>
 							<div class="col-md-12">
-								<form class="p-l-20" role="form">
-									 <div class="form-group form-group-default required">
+								<form class="p-l-20" role="form" v-for="(row, index) in table.body_data">
+									<h6 class="bold text-capitalize">table row {{index + 1}}</h6>
+									<div class="form-group form-group-default required">
 								        <label class="text-capitalize">table row data</label>
-								        <textarea type="text" class="form-control custom-height" required></textarea>
+								        <textarea type="text" class="form-control custom-height" required v-model="row.raw"></textarea>
 								    </div>
 								</form>
 							</div>
 						</div>
-						<div class="row m-t-20" v-if="(chart.type === 'table')">
+						<div class="row m-t-20" v-if="(chart_type === 'table')">
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
-									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="">
+									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_table()">
 									    <span class="text-capitalize">preview table</span>
 									</button>
 									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" id="download-btn" download="chart.html">
 									    <span class="text-capitalize">download table</span>
 									</a>
+								</div>
+							</div>
+							<div class="col-md-12" v-if="(table_preview === true)">
+								<div class="p-l-20 p-t-30">
+									<table class="table">
+										<thead>
+											<tr>
+												<th class="bg-purple" v-for="content in table.header_row">{{content}}</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr v-for=""></tr>
+										</tbody>
+									</table>
 								</div>
 							</div>
 						</div>
