--- a/index.html
+++ b/index.html
@@ -348,12 +348,6 @@
 								<div class="p-b-20 p-l-20">
 									<div class="row">
 										<div class="col-md-4">
-											<div class="form-group form-group-default required m-t-15">
-										        <label class="text-capitalize">column count</label>
-										        <input type="text" class="form-control custom-height" required v-model="table.column_count">
-										    </div>
-										</div>
-										<div class="col-md-4">
 											<h6 class="text-uppercase bold">table header color</h6>
 											<select class="form-control" v-model="table.header_color">
 											    <option value="purple" class="text-capitalize">Purple</option>
@@ -363,7 +357,7 @@
 											    <option value="yellow" class="text-capitalize">Yellow</option>
 											</select>
 										</div>
-										<div class="col-md-4">
+										<div class="col-md-8">
 											<div class="p-t-30">
 												<div class="checkbox check-info">
 												    <input type="checkbox" v-model="table.left_number" id="leftNumber">
@@ -408,7 +402,7 @@
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
-									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_table(); download_table();">
+									<button class="btn btn-info btn-animated from-left fa fa-eye" type="button" v-on:click="preview_table();">
 									    <span class="text-capitalize">preview table</span>
 									</button>
 									<a class="btn btn-success btn-animated from-left fa fa-download m-l-20" id="download-table" download="table.html">
