--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
 										<div class="col-md-6">
 											<h6 class="text-uppercase bold">圖表顏色</h6>
 											<select class="form-control" v-model="data.color">
-											    <option value="light_green" class="text-capitalize">purple</option>
+											    <option value="light_green" class="text-capitalize">light green</option>
 											    <option value="green" class="text-capitalize">green</option>
-											    <option value="light_blue" class="text-capitalize">blue</option>
-											    <option value="blue" class="text-capitalize">orange</option>
-											    <option value="dark_blue" class="text-capitalize">yellow</option>
+											    <option value="light_blue" class="text-capitalize">light blue</option>
+											    <option value="blue" class="text-capitalize">blue</option>
+											    <option value="dark_blue" class="text-capitalize">dark blue</option>
 											</select>
 										</div>
 										<div class="col-md-6">
