--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 										</div>
 
 										<div class="col-md-3" v-if="data.type === 'line'">
-											<h6 class="text-uppercase bold">填滿</h6>
+											<h6 class="text-uppercase bold">Line區域填色</h6>
 											<div class="checkbox check-info">
 										    <input type="checkbox" v-model="data.fill" v-bind:id="'fill-'+index">
 										    <label v-bind:for="'fill-'+index" class="text-capitalize">Fill</label>
@@ -403,6 +403,18 @@
 							</div>
 						</div>
 						<div class="row" v-if="current_step === 1 && ((chart_type === 'bar') || (chart_type === 'line'))">
+							<div class="col-md-12">
+								<h5 class="semi-bold">5. 資料總覽＆排序 (可使用拖拉調整順序)</h5>
+							</div>
+							<div class="col-md-12">
+								<div class="p-l-20">
+									<draggable id="draggable" v-model="chart.y_dataset" :options="{draggable:'.item'}">
+								    <div v-for="(data, index) in chart.y_dataset" :key="data.id" class="item btn btn-default">
+								        {{index}}. {{data.label}} ({{data.type}})
+								    </div>
+									</draggable>
+								</div>
+							</div>
 							<div class="col-md-12">
 								<hr>
 								<div class="p-l-20">
@@ -641,6 +653,7 @@
 		<script src="assets/plugins/classie/classie.js" type="text/javascript"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.3.5/papaparse.js"></script>
+
 		<!-- END VENDOR JS -->
 		<!-- BEGIN CORE TEMPLATE JS -->
 		<script src="pages/js/pages.js" type="text/javascript"></script>
@@ -648,6 +661,10 @@
 		<!-- BEGIN PAGE LEVEL JS -->
 
 		<script src="https://unpkg.com/vue"></script>
+		<!-- CDNJS :: Sortable (https://cdnjs.com/) -->
+		<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.7.0/Sortable.min.js"></script>
+		<!-- CDNJS :: Vue.Draggable (https://cdnjs.com/) -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Vue.Draggable/2.15.0/vuedraggable.min.js"></script>
 		<script src="assets/js/scripts.js" type="text/javascript"></script>
 		<!-- END PAGE LEVEL JS -->
 	</body>
